# ai-assist-anthropic-adapter

./: .gitignore  AGENTS.md  README.md  TASKS.md  package.json  pyproject.toml  test_all.py
src/: anthropic-adapter.js  constants.js  errors.js  index.js  logging.js  usage.js
src/ai_assist_anthropic_adapter/: __init__.py  adapter.py  constants.py  errors.py  logging.py  provider_access.py  usage.py
test/: anthropic-adapter.test.js
tests/: common.py  test_adapter.py  test_anthropic_adapter.py  test_errors.py  test_logging.py  test_provider_access.py
