[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assist-anthropic-adapter"
version = "0.1.0"
description = "Dependency-light Anthropic provider adapter for AI Assist Platform."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
